# pimatch

./: CMakeLists.txt  CONTRIBUTING.md  README.md
demo/: Benchmark.cpp  Demo.cpp
demo/DBoW2/: CMakeLists.txt
doc/: match_times  match_times.plot
include/: HammingMatch.h  HammingTree.h
src/: HammingMatch.cpp  HammingTree.cpp
test/: HammingMatchTest.cpp  HammingTreeTest.cpp  TestUtil.cpp  TestUtil.h
